# oteapi-aiida

./: .pre-commit-config.yaml  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tasks.py
.github/utils/: release_tag_msg.txt  single_dependency_pr_body.txt
.github/workflows/: cd_release.yml  ci_automerge_dependabot.yml  ci_cd_updated_main.yml  ci_dependabot.yml  ci_tests.yml
docs/: all_strategies.md  index.md
docs/api_reference/strategies/: download.md  filter.md  function.md  mapping.md  parse.md  resource.md  transformation.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: index.html
latest/LICENSE/: index.html
latest/all_strategies/: index.html
latest/api_reference/strategies/download/: index.html
latest/api_reference/strategies/filter/: index.html
latest/api_reference/strategies/function/: index.html
latest/api_reference/strategies/mapping/: index.html
latest/api_reference/strategies/parse/: index.html
latest/api_reference/strategies/resource/: index.html
latest/api_reference/strategies/transformation/: index.html
latest/search/: search_index.json
oteapi_aiida/: __init__.py
oteapi_aiida/models/: aiida.py
oteapi_aiida/strategies/: aiidaresource.py
tests/strategies/: test_aiidaresource.py  test_download.py  test_filter.py  test_function.py  test_mapping.py  test_parse.py  test_resource.py  test_transformation.py
