# Either uncomment the strategy lines as they are needed
# or remove them if they are not needed.
[options.entry_points]
oteapi.download =
  # oteapi_aiida.fileDEMO = oteapi_aiida.strategies.download:DemoFileStrategy
oteapi.filter =
  # oteapi_aiida.filter/DEMO = oteapi_aiida.strategies.filter:DemoFilter
oteapi.function =
  # oteapi_aiida.function/DEMO = oteapi_aiida.strategies.function:DemoFunctionStrategy
oteapi.mapping =
  # oteapi_aiida.mapping/DEMO = oteapi_aiida.strategies.mapping:DemoMappingStrategy
oteapi.parse =
  # oteapi_aiida.application/jsonDEMO = oteapi_aiida.strategies.parse:DemoJSONDataParseStrategy
oteapi.resource =
  # oteapi_aiida.AiiDA = oteapi_aiida.strategies.resource:DemoResourceStrategy
oteapi.transformation =
  # oteapi_aiida.script/DEMO = oteapi_aiida.strategies.transformation:DummyTransformationStrategy
